@@ -1,3 +1,15 @@
+2010-05-26  Xan Lopez  <xlopez@igalia.com>
+
+        Reviewed by Gustavo Noronha.
+
+        [GTK] Add support for DOM events in the GObject DOM bindings
+        https://bugs.webkit.org/show_bug.cgi?id=38844
+
+        Use GObject-like names for the DOM event signals. Basically go
+        from 'mousewheel' to 'mouse-wheel-event'.
+
+        * bindings/scripts/CodeGeneratorGObject.pm:
+
 2010-05-26  Nikolas Zimmermann  <nzimmermann@rim.com>
 
         Not reviewed. Sort XCode project file.
